--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-images": "^1.2.0-beta.7",
     "react-photo-gallery": "^8.0.0",
     "react-slick": "^0.28.1",
+    "react-spring": "^9.4.4",
     "sass": "^1.49.7",
     "slick-carousel": "^1.8.1"
   },
