--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby": "^4.6.2",
     "gatsby-plugin-gatsby-cloud": "^4.6.0",
     "gatsby-plugin-image": "^2.6.0",
+    "gatsby-plugin-intl": "^0.3.3",
     "gatsby-plugin-manifest": "^4.6.0",
     "gatsby-plugin-offline": "^5.6.0",
     "gatsby-plugin-react-helmet": "^5.6.0",
