--- a/package.json
+++ b/package.json
@@ -5,34 +5,33 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "@emotion/react": "^11.8.1",
-    "@emotion/styled": "^11.8.1",
-    "axios": "^0.27.2",
-    "gatsby": "^4.6.2",
-    "gatsby-plugin-gatsby-cloud": "^4.6.0",
-    "gatsby-plugin-image": "^2.6.0",
-    "gatsby-plugin-intl": "^0.3.3",
-    "gatsby-plugin-manifest": "^4.6.0",
-    "gatsby-plugin-offline": "^5.6.0",
-    "gatsby-plugin-react-helmet": "^5.6.0",
-    "gatsby-plugin-sass": "^5.7.0",
-    "gatsby-plugin-sharp": "^4.6.0",
-    "gatsby-source-filesystem": "^4.6.0",
-    "gatsby-transformer-sharp": "^4.6.0",
-    "prop-types": "^15.8.0",
-    "qs": "^6.11.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "axios": "^1.7.7",
+    "gatsby": "^5.13.7",
+    "gatsby-plugin-gatsby-cloud": "^5.13.1",
+    "gatsby-plugin-image": "^3.13.1",
+    "gatsby-plugin-intl": "^5.10.0",
+    "gatsby-plugin-manifest": "^5.13.1",
+    "gatsby-plugin-offline": "^6.13.3",
+    "gatsby-plugin-react-helmet": "^6.13.1",
+    "gatsby-plugin-sass": "^6.13.1",
+    "gatsby-plugin-sharp": "^5.13.1",
+    "gatsby-source-filesystem": "^5.13.1",
+    "gatsby-transformer-sharp": "^5.13.1",
+    "prop-types": "^15.8.1",
+    "qs": "^6.13.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
-    "react-images": "^1.2.0-beta.7",
-    "react-photo-gallery": "^8.0.0",
-    "react-slick": "^0.28.1",
-    "react-spring": "^9.4.4",
-    "sass": "^1.49.7",
+    "react-image-gallery": "^1.3.0",
+    "react-slick": "^0.30.2",
+    "react-spring": "^9.7.4",
+    "sass": "^1.79.4",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
-    "prettier": "^2.5.1"
+    "prettier": "^3.3.3"
   },
   "keywords": [
     "gatsby"
